// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProtectedRoute /> renders correctly with a user 1`] = `
<ProtectedRoute
  auth={
    AuthMock {
      "checkSession": [MockFunction],
      "getUser": [MockFunction],
      "login": [MockFunction],
      "logout": [MockFunction],
      "redirectToPage": "/profile/123",
      "user": Object {
        "accessToken": "xZXnpwklGhqd-zN5pJKbkHXNg5jBdJYu",
        "appState": null,
        "idToken": "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6Ik5UY3…XhKpVLcBSw6qUe4KgjCI4sIgDa3_Kh7TbaSLgd__pJdZLriQg",
        "idTokenPayload": Object {},
        "refreshToken": null,
      },
    }
  }
  component={[MockFunction]}
  redirectTo="a-route"
  routing={
    RoutingMock {
      "breadcrumb": Array [
        Object {
          "id": "123-123-123",
          "page": "profile",
        },
      ],
      "getBreadcrumb": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goBackToPage": [MockFunction],
      "goForward": [MockFunction],
      "history": Object {},
      "location": Object {},
      "push": [MockFunction],
      "replace": [MockFunction],
      "resizeBreadcrumbs": [MockFunction],
      "splitThings": [MockFunction],
    }
  }
/>
`;

exports[`<ProtectedRoute /> renders correctly with no user 1`] = `
<ProtectedRoute
  auth={
    Object {
      "checkSession": [MockFunction],
      "getUser": [MockFunction],
      "login": [MockFunction],
      "logout": [MockFunction],
      "redirectToPage": "/profile/123",
      "user": null,
    }
  }
  component={[MockFunction]}
  redirectTo="a-route"
  routing={
    RoutingMock {
      "breadcrumb": Array [
        Object {
          "id": "123-123-123",
          "page": "profile",
        },
      ],
      "getBreadcrumb": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goBackToPage": [MockFunction],
      "goForward": [MockFunction],
      "history": Object {},
      "location": Object {},
      "push": [MockFunction],
      "replace": [MockFunction],
      "resizeBreadcrumbs": [MockFunction],
      "splitThings": [MockFunction],
    }
  }
/>
`;
